--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "𝓓𝓻𝓮𝓪𝓶𝔁𝓑𝓸𝓽𝔃",
+    "name": "DARK LIFE",
     "description": "When you going to send file on telegram channel this bot will save that in database, So you can search that easily in inline mode",
     "stack": "container",
     "keywords": [
@@ -15,8 +15,8 @@
       "index",
       "inline"
     ],
-    "website": "https://github.com/DreamXBotz/Auto_Filter_Bot.git",
-    "repository": "https://github.com/DreamXBotz/Auto_Filter_Bot.git",
+    "website": "https://DOWNLOADTERABOX.COM",
+    "repository": "https://github.com/akroy47/Auto_Filter_Bot.git",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
