--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 pyrofork==2.3.45
 tgcrypto-pyrofork
-pymongo[srv]==4.11.1
-motor==3.7.0
-marshmallow==3.26.1
-umongo
+pymongo==4.13.2
+motor==3.7.1
+marshmallow==3.18.0
+umongo==3.1.0
 requests
 beautifulsoup4
 shortzy
@@ -19,7 +19,7 @@ wikipedia
 opencv-python-headless==4.8.1.78
 python-dotenv==0.21.1
 humanize==4.6.0
-Pillow==9.4.0
+Pillow==11.3.0
 psutil==5.9.4
 numpy
 wheel
